@@ -1,0 +1,16 @@
+<?php
+/**
+* For backward compatibility of xoopseditors, some modules are still using this path.
+*
+* @copyright	http://www.xoops.org/ The XOOPS Project
+* @copyright	XOOPS_copyrights.txt
+* @copyright	http://www.impresscms.org/ The ImpressCMS Project
+* @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
+* @package		core
+* @since		XOOPS
+* @author		http://www.xoops.org The XOOPS Project
+* @author	   Sina Asghari (aka stranger) <pesian_stranger@users.sourceforge.net>
+* @version		$Id$
+*/
+include_once str_replace("/class/xoopseditor/", "/class/", str_replace("\\", "/", __FILE__));
+?>
