@@ -9,7 +9,7 @@
 * @package		core
 * @since		XOOPS
 * @author		http://www.xoops.org The XOOPS Project
-* @author		modified by stranger <stranger@impresscms.ir>
+* @author	   Sina Asghari (aka stranger) <pesian_stranger@users.sourceforge.net>
 * @version		$Id$
 *
 * @package kernel 
@@ -124,7 +124,7 @@ if($op == 'saveuser')
         		}
 			else
 			{
-				$signature = $myts->displayTarea($_POST['user_sig'], 1);
+				$signature = $myts->previewTarea($_POST['user_sig'], 1, 1, 1, 1, 1);
         			$edituser->setVar('user_sig', xoops_substr($signature, 0, intval($xoopsConfigUser['sig_max_length'])));
         		}
 		}
