@@ -42,13 +42,8 @@ function xoops_header($closehead=true)
 	<title>'.htmlspecialchars($xoopsConfig['sitename']).'</title>
 	<script type="text/javascript" src="'.ICMS_URL.'/include/xoops.js"></script>
 	<script type="text/javascript" src="'.ICMS_URL.'/include/linkexternal.js"></script>
-	';
+	<link rel="stylesheet" type="text/css" media="all" href="' . XOOPS_URL . '/icms'.(( defined('_ADM_USE_RTL') && _ADM_USE_RTL )?'_rtl':'').'.css" />';
 	$themecss = getcss($xoopsConfig['theme_set']);
-		if ( defined('_ADM_USE_RTL') && _ADM_USE_RTL ){
-	echo '<link rel="stylesheet" type="text/css" media="all" href="' . XOOPS_URL . '/icms_rtl.css" />';
-	   } else {
-	echo '<link rel="stylesheet" type="text/css" media="all" href="' . XOOPS_URL . '/icms.css" />';
-           }
 	if ($themecss) {
 		echo '<link rel="stylesheet" type="text/css" media="all" href="'.$themecss.'" />';
 		//echo '<style type="text/css" media="all"><!-- @import url('.$themecss.'); --></style>';
@@ -1604,5 +1599,32 @@ function getDbValue(&$db, $table, $field, $condition = '')
 		if($row) {return $row[0];}
 	}
 	return false;
+}
+
+/**
+* Function to escape $value makes safe for DB Queries.
+* 
+* @param string $quotes - true/false - determines whether to add quotes to the value or not.
+* @param string $value - $variable that is being escaped for query.
+* @return string
+*/
+function icms_escapeValue($value, $quotes = true)
+{
+	if(is_string($value))
+	{
+		if(get_magic_quotes_gpc) {$value = stripslashes($value);}
+		$value = mysql_real_escape_string($value);
+		if($quotes) {$value = '"'.$value.'"';}
+	}
+	elseif($value === null) {$value = 'NULL';}
+	elseif(is_bool($value)) {$value = $value ? 1 : 0;}
+	elseif(is_numeric($value)) {$value = intval($value);}
+	elseif(is_int($value)) {$value = intval($value);}
+	elseif(!is_numeric($value))
+	{
+		$value = mysql_real_escape_string($value);
+		if($quotes) {$value = '"'.$value.'"';}
+	}
+	return $value;
 }
 ?>
