@@ -12,7 +12,7 @@
  * @copyright	XOOPS_copyrights.txt
  * @copyright	http://www.impresscms.org/ The ImpressCMS Project
  * @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
- * @package		installer
+ * @package		libraries
  * @since		XOOPS
  * @author		http://www.xoops.org/ The XOOPS Project
  * @author		Taiwen Jiang (phppp or D.J.) <php_pp@hotmail.com>
@@ -26,15 +26,15 @@ $config = array(
 	"skipmember"		=> false,					// Skip CAPTCHA check for members
 	"maxattempt"		=> 8,  					// Maximum attempts for each session
 	
-	"num_chars"			=> 8,  						// Maximum characters
+	"num_chars"			=> 4,  						// Maximum characters
 	
 													// For image mode, based on DuGris' SecurityImage
 	"rootpath"			=> dirname(__FILE__),		// __Absolute__ Path to the root of fonts and backgrounds
-	"imagepath"			=> "uploads/captcha",		// Path to temporary image files, __relative__ to ICMS_ROOT_PATH
+	"imagepath"			=> "cache/captcha",		// Path to temporary image files, __relative__ to ICMS_ROOT_PATH
 	"imageurl"			=> "libraries/captcha/scripts/img.php",		// Path to the script for creating image, __relative__ to ICMS_ROOT_PATH
 	"casesensitive"		=> false,					// Characters in image mode is case-sensitive
-	"fontsize_min"		=> 12,  					// Minimum font-size
-	"fontsize_max"		=> 14,  					// Maximum font-size 
+	"fontsize_min"		=> 9,  					// Minimum font-size
+	"fontsize_max"		=> 10,  					// Maximum font-size 
 	"background_type"	=> 100, 						// Background type in image mode: 0 - bar; 1 - circle; 2 - line; 3 - rectangle; 4 - ellipse; 5 - polygon; 100 - generated from files
 	"background_num"	=> 50,						// Number of background images to generate
 	"polygon_point"		=> 3,
