@@ -33,9 +33,12 @@
 if (! is_object ( $xoopsUser ) || ! is_object ( $xoopsModule ) || ! $xoopsUser->isAdmin ( $xoopsModule->mid () )) {
 	exit ( "Access Denied" );
 } else {
-	if(!empty($_POST)) foreach($_POST as $k => $v) ${$k} = StopXSS($v);
-	if(!empty($_GET)) foreach($_GET as $k => $v) ${$k} = StopXSS($v);
+	$allowedHTML = array('conf_value');
+
+	if(!empty($_POST)){ foreach($_POST as $k => $v){ if (!in_array($k,$allowedHTML)){${$k} = StopXSS($v);}else{${$k} = $v;}}}
+	if(!empty($_GET)){ foreach($_GET as $k => $v){ if (!in_array($k,$allowedHTML)){${$k} = StopXSS($v);}else{${$k} = $v;}}}
 	$op = (isset($_GET['op']))?trim(StopXSS($_GET['op'])):((isset($_POST['op']))?trim(StopXSS($_POST['op'])):'list');
+
 	if (isset ( $_GET ['confcat_id'] )) {
 		$confcat_id = intval ( $_GET ['confcat_id'] );
 }
