@@ -95,9 +95,9 @@ function b_system_login_show()
         $block['lang_lostpass'] = _MB_SYSTEM_LPASS;
         $block['lang_registernow'] = _MB_SYSTEM_RNOW;
         $block['lang_rememberme'] = _MB_SYSTEM_REMEMBERME;
-        $block['lang_youoid'] = _MB_SYSTEM_YOU_OID;
-        $block['lang_login_oid'] = _MB_SYSTEM_LOGIN_OID;
-        $block['lang_back2normoid'] = _MB_SYSTEM_BACK2NORM_OID;
+        $block['lang_youoid'] = _MB_SYSTEM_OPENID_URL;
+        $block['lang_login_oid'] = _MB_SYSTEM_OPENID_LOGIN;
+        $block['lang_back2normoid'] = _MB_SYSTEM_OPENID_NORMAL_LOGIN;
         if ($xoopsConfig['use_ssl'] == 1 && $xoopsConfig['sslloginlink'] != '') {
             $block['sslloginlink'] = "<a href=\"javascript:openWithSelfMain('".$xoopsConfig['sslloginlink']."', 'ssllogin', 300, 200);\">"._MB_SYSTEM_SECURE."</a>";
         }
