@@ -6,6 +6,13 @@
 <head>
 	<title>ImpressCMS Upgrade</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=<?php echo _UPGRADE_CHARSET ?>" />
+		<script type="text/javascript" src="../libraries/prototype/prototype.js"></script>
+	<script type="text/javascript">
+	function showHideHelp( butt ) {
+		butt.className = ( butt.className == 'on' ) ? 'off': 'on';
+		document.body.className = ( butt.className == 'on' ) ? 'show-help': '';
+	}
+	</script>
 	<link rel="stylesheet" type="text/css" media="all" href="style.css" />
 </head>
 <body>
