@@ -12,13 +12,22 @@ ImpressCMS ChangeLog
 
 == Impresscms 1.1==
 
-===2008-08-08 : 1.1 RC 1===
+===2008-08-?? : 1.1 RC 1===
+'''Added'''
+* agree box before upgrading to make sure of a backup. (stranger)
+* added password can't contain username to pass check in admin edit user form. (vaughan)
+
+'''Improved'''
+* Improved how we use rtl in system. (stranger/real_therplima)
 
 '''Fixed'''
 * 2 errors with google meta tag and google analytics. (stranger)
 * possible issue in modulesadmin/main.php (real_therplima/trabis)
 * #2048746: SQL error when creating invites and system_customtags tables (Commerce)
 * #2037989 - Registration notification sent twice (real_therplima)
+* bug with modules when calling editors. (stranger)
+* bug "Cannot redeclare class XoopsFormCaptcha". (stranger)
+
 ===2008-08-08 : 1.1 Beta 1===
 
 '''Added'''
